// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.css-r0p235-RadioContainer[aria-disabled='false'],
.css-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.css-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.css-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true']>label,
.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.css-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.css-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.css-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.css-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.css-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.css-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      aria-disabled="false"
      class="css-r0p235-RadioContainer ehkrmld2"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="css-1ghsgz8-RadioInput ehkrmld3"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="css-1dyk1l0-Ring ehkrmld4"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="css-1niv4ql-InnerCircleRing ehkrmld6"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="css-ivayk3-RadioMark ehkrmld5"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        class="css-shj57p-StyledLabel ehkrmld1"
        for="radio-choice"
      >
        Choice
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.css-r0p235-RadioContainer[aria-disabled='false'],
.css-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.css-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.css-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true']>label,
.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.css-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.css-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.css-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.css-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.css-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.css-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      aria-disabled="false"
      class="css-r0p235-RadioContainer ehkrmld2"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="css-1ghsgz8-RadioInput ehkrmld3"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="css-1dyk1l0-Ring ehkrmld4"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="css-1niv4ql-InnerCircleRing ehkrmld6"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="css-ivayk3-RadioMark ehkrmld5"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        class="css-shj57p-StyledLabel ehkrmld1"
        for="radio-choice"
      >
        Choice
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.css-r0p235-RadioContainer[aria-disabled='false'],
.css-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.css-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.css-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true']>label,
.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.css-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.css-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.css-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.css-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.css-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.css-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      aria-disabled="true"
      class="css-r0p235-RadioContainer ehkrmld2"
      data-checked="false"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="css-1ghsgz8-RadioInput ehkrmld3"
        disabled=""
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="css-1dyk1l0-Ring ehkrmld4"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="css-1niv4ql-InnerCircleRing ehkrmld6"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="css-ivayk3-RadioMark ehkrmld5"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        class="css-shj57p-StyledLabel ehkrmld1"
        for="radio-choice"
      >
        Choice
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when error 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.css-r0p235-RadioContainer[aria-disabled='false'],
.css-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.css-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.css-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true']>label,
.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.css-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.css-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.css-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.css-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.css-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.css-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      aria-disabled="false"
      class="css-r0p235-RadioContainer ehkrmld2"
      data-checked="false"
      data-error="Invalid value"
    >
      <input
        aria-disabled="false"
        aria-invalid="true"
        class="css-1ghsgz8-RadioInput ehkrmld3"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="css-1dyk1l0-Ring ehkrmld4"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="css-1niv4ql-InnerCircleRing ehkrmld6"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="css-ivayk3-RadioMark ehkrmld5"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        class="css-shj57p-StyledLabel ehkrmld1"
        for="radio-choice"
      >
        Choice
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when helper 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.css-r0p235-RadioContainer[aria-disabled='false'],
.css-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.css-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.css-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true']>label,
.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.css-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.css-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.css-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.css-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.css-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.css-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-by24pi-StyledText-MargedText {
  color: #727683;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-left: 32px;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      aria-disabled="false"
      class="css-r0p235-RadioContainer ehkrmld2"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="css-1ghsgz8-RadioInput ehkrmld3"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="css-1dyk1l0-Ring ehkrmld4"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="css-1niv4ql-InnerCircleRing ehkrmld6"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="css-ivayk3-RadioMark ehkrmld5"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        class="css-shj57p-StyledLabel ehkrmld1"
        for="radio-choice"
      >
        Choice
      </label>
    </div>
    <span
      class="ehkrmld0 css-by24pi-StyledText-MargedText e13y3mga0"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly with tooltip 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.css-r0p235-RadioContainer[aria-disabled='false'],
.css-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.css-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.css-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true']>label,
.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.css-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.css-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.css-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.css-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.css-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.css-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    aria-controls=":r5:"
    aria-describedby=":r5:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="0"
  >
    <div
      class="css-ymc80m-Stack ehpbis70"
    >
      <div
        aria-disabled="false"
        class="css-r0p235-RadioContainer ehkrmld2"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="css-1ghsgz8-RadioInput ehkrmld3"
          id="radio-choice"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="css-1dyk1l0-Ring ehkrmld4"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="css-1niv4ql-InnerCircleRing ehkrmld6"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="css-ivayk3-RadioMark ehkrmld5"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="css-shj57p-StyledLabel ehkrmld1"
          for="radio-choice"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders without name 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.css-r0p235-RadioContainer[aria-disabled='false'],
.css-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.css-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.css-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.css-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true']>label,
.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.css-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.css-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.css-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.css-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.css-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.css-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.css-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.css-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.css-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      aria-disabled="true"
      class="css-r0p235-RadioContainer ehkrmld2"
      data-checked="false"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="css-1ghsgz8-RadioInput ehkrmld3"
        disabled=""
        id=":r6:-choice"
        name=":r6:"
        type="radio"
        value="choice"
      />
      <svg
        class="css-1dyk1l0-Ring ehkrmld4"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="css-1niv4ql-InnerCircleRing ehkrmld6"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="css-ivayk3-RadioMark ehkrmld5"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        class="css-shj57p-StyledLabel ehkrmld1"
        for=":r6:-choice"
      >
        Choice
      </label>
    </div>
  </div>
</DocumentFragment>
`;
